--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -26,8 +26,8 @@
   "scripts": {
     "build": "run-s clean build-only move-style",
     "build-only": "run-p build-umd build-es",
-    "build-umd": "vite build --config vite.umd.config.ts",
-    "build-es": "vite build --config vite.es.config.ts",
+    "build-umd": "vite build --config build/vite.umd.config.ts",
+    "build-es": "vite build --config build/vite.es.config.ts",
     "move-style": "move-file dist/es/index.css dist/index.css",
     "clean": "rimraf dist",
     "release": "release-it"
