--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -23,7 +23,8 @@
     "types": ["node"],
   },
   "include": [
-    "packages/core/**/*.ts",
+    "packages/core/index.ts",
+    "packages/core/components.ts",
     "packages/hooks/**/*.ts",
     "packages/utils/**/*.ts",
     "packages/components/index.ts",
