--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -18,7 +18,8 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true
+    "noUncheckedSideEffectImports": true,
+    "removeComments": true
   },
   "include": ["packages/**/**.config.ts", "packages/**/utils/**.ts"],
 }
