--- a/package.json
+++ b/package.json
@@ -5,14 +5,15 @@
   "main": "index.js",
   "scripts": {
     "dev": "pnpm --filter @nekona-ui-test/playground dev",
+    "dev:docs": "pnpm --filter @nekona-ui-test/docs dev",
     "build": "pnpm --filter nekona-ui-test build",
     "release": "pnpm --filter nekona-ui-test release",
     "push": "run-s build release"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
-  "packageManager": "pnpm@10.16.1",
+  "license": "MIT",
+  "packageManager": "pnpm@10.17.1",
   "peerDependencies": {
     "vue": "^3.5.21"
   },
@@ -26,12 +27,12 @@
     "@types/node": "^24.5.2",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/tsconfig": "^0.8.1",
+    "move-file-cli": "3.0.0",
+    "npm-run-all": "^4.1.5",
+    "rimraf": "^6.0.1",
     "typescript": "^5.9.2",
     "vite": "^7.1.6",
     "vite-plugin-dts": "^4.5.4",
-    "vue-tsc": "^3.0.7",
-    "npm-run-all": "^4.1.5",
-    "move-file-cli": "3.0.0",
-    "rimraf": "^6.0.1"
+    "vue-tsc": "^3.0.7"
   }
 }
