--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -1,6 +1,19 @@
 {
   "name": "@nekona-ui-test/docs",
+  "private": true,
   "version": "1.0.0",
-  "main": "index.js",
-  "packageManager": "pnpm@10.14.0"
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vue-tsc -b && vite build",
+    "preview": "vite preview"
+  },
+  "dependencies": {
+    "fast-glob": "^3.3.3",
+    "pinia": "^3.0.3",
+    "vue": "^3.5.21",
+    "vue-router": "^4.5.1",
+    "vite-plugin-svg-icons": "^2.0.1",
+    "highlight.js": "^11.11.1"
+  }
 }
